Day 1 In Class tasks

--- a/classes1.html
+++ b/classes1.html
@@ -4,7 +4,7 @@
 
 <h2>JavaScript Function as Class</h2>
 
-<script> 
+<script>
 
 function Person() {
     this.firstName = "unknown";
@@ -12,13 +12,17 @@ function Person() {
 }
 
 //Create object 1
+var person1 = new Person();
+person1.firstName = "John";
+person1.lastName = "Doe";
 
-            
 alert();
 
 //Create object 2
+var person2 = new Person();
+person2.firstName = "Jane";
+person2.lastName = "Smith";
 
-            
 alert();
 
 </script>
