--- a/constructors.html
+++ b/constructors.html
@@ -6,13 +6,13 @@
 
 <script>
 
-    function Vehicle(name, maker) { 
-        this.name = name; 
-        this.maker = maker; 
-    } 
+    function Vehicle(name, maker) {
+        this.name = name;
+        this.maker = maker;
+    }
 
-    var car1 = new Vehicle(); // 'Focus', 'Ford'
-    var car2 = new Vehicle(); //'Elantra', 'Hyundai'
+    var car1 = new Vehicle('Focus', 'Ford'); //'Focus', 'Ford'
+    var car2 = new Vehicle('Elantra', 'Hyundai'); //'Elantra', 'Hyundai'
 
     console.log(car1.name); // Output: Focus
     console.log(car2.name); // Output: Elantra
