--- a/classes2.html
+++ b/classes2.html
@@ -4,13 +4,13 @@
 
 <h2>JavaScript Function as Class</h2>
 
-<script> 
+<script>
 
 function Person() {
             this.firstName = "unknown";
             this.lastName = "unknown";
             //Create a method
-            
+
         };
 
 //Create object 1
@@ -19,7 +19,7 @@ person1.firstName = "Steve";
 person1.lastName = "Jobs";
 
 //apply method
-
+alert(person1.firstName + " " + person1.lastName);
 
 //Create object 2
 var person2 = new Person();
@@ -27,7 +27,7 @@ person2.firstName = "Bill";
 person2.lastName = "Gates";
 
 //apply method
- 
+alert(person2.firstName + " " + person2.lastName);
 
 </script>
 
