--- a/inheritance.html
+++ b/inheritance.html
@@ -6,11 +6,11 @@
 
 <script>
 
-// hasOwnProperty code in js 
-const object1 = new Object(); 
-object1.property1 = 42; 
-  
-console.log(object1.hasOwnProperty('')); // true 
+// hasOwnProperty code in js
+const object1 = new Object();
+object1.property1 = 42;
+
+console.log(object1.hasOwnProperty('property1')); // true
 
 
 </script>
