--- a/polymorphism.html
+++ b/polymorphism.html
@@ -4,7 +4,7 @@
 
 <h2>JavaScript Encapsulation</h2>
 
-<script> 
+<script>
     function Dog() {} //create class/function
 var DogType = Dog.prototype; //create prototype
 
@@ -24,7 +24,13 @@ DogType.runNumber = function(speed){ //attach a sub method to prototype
 }
 
 //Create Method 2
-
+DogType.eat = function(food) {
+  if(food == 'dry') {
+    console.log('The dog eats ' + food + 'food');
+  } else {
+    console.log('The dog eats ' + food + 'food');
+  }
+}
 
 //Create an object
 var dog = new Dog();
@@ -34,7 +40,7 @@ dog.run(); //The dog runs at a speed of 15 miles/hr
 dog.run(); //The dog runs at a speed of 20 miles/hr
 
 //Apply method 2 to object
-
+dog.eat('dog');
 
 </script>
 
