--- a/vue_demo2.html
+++ b/vue_demo2.html
@@ -19,8 +19,18 @@
             greeting: 'Hello World!'
         }
     });
+
+    Vue.component('mycomponent2',{
+        template : '<div><p>VUE is interesting!</p></div>'
+    });
+    var vm1 = new Vue({
+        el: '#component1'
+    });
+    var vm2 = new Vue({
+        el: '#component2'
+    });
+
 </script>
-    
+
 </body>
 </html>
-
